Add get ms linked views
